# Audio-Text-Manager

./: .gitignore  README.md  offline_whisper_summarizer_app_21c321f7.plan.md  pyproject.toml
backend/app/: logging_config.py  main.py  media_probe.py  settings.py
backend/app/asr/: __init__.py  ffmpeg_normalize.py  presets.py  transcribe.py
backend/app/jobs/: database.py  pipeline.py  repository.py  routes.py  schemas.py  worker.py
backend/app/summary/: __init__.py  chunking.py  ollama.py  presets.py  prompts.py  summarize.py  text_clip.py
configs/: app.example.yaml
frontend/: app.js  index.html  style.css
tests/: conftest.py  test_health.py  test_jobs_acceptance.py  test_jobs_api_extended.py  test_media_probe.py  test_offline_settings.py  test_presets.py  test_text_clip.py
